--- a/css/main.css
+++ b/css/main.css
@@ -2,8 +2,8 @@ body{
     background-color: #8f1757;
 }
 p{
-    color: darkgray;
+    color: rgb(166, 64, 64);
 }
 h2{
-    font-size: 50;
+    font-size: 66;
 }
